--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,22 +6,16 @@ on:
     branches: [ main, master ]
 jobs:
   test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
+    - name: Install Playwright version 1.49
+      run: npm install playwright@1.49.0 --save-dev
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
